<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">


    <AutoCompleteTextView
        android:id="@+id/search_edittext"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/search_edittext_background"
        android:drawableLeft="@drawable/ic_search"
        android:ems="10"
        android:hint="Tìm kiếm Việt-Anh..."
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Thanh chứa các nút khác (Home, Course, Message, Account) -->
    <LinearLayout
        android:id="@id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1F0FF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/home_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home_button"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trang chủ"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Course Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/course_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/course_button"
                app:srcCompat="@drawable/ic_course" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khóa học"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Library Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/message_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/lib_button"
                app:srcCompat="@drawable/ic_lib" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thư viện"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Account Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/account_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/account_button"
                app:srcCompat="@drawable/ic_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tài khoản"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
