<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    tools:context=".SearchWords">

    <!-- Thanh chứa các nút khác (Home, Course, Message, Account) -->
    <LinearLayout
        android:id="@id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1F0FF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/home_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home_button"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trang chủ"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Course Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/course_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/course_button"
                app:srcCompat="@drawable/ic_course" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khóa học"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Library Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/message_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/lib_button"
                app:srcCompat="@drawable/ic_lib" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thư viện"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Account Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/account_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/account_button"
                app:srcCompat="@drawable/ic_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tài khoản"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Translate"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/volume_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edittext" />

    <EditText
        android:id="@+id/search_edittext"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/search_edittext_background"
        android:drawableLeft="@drawable/ic_search"
        android:ems="10"
        android:hint="Find Word"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/volume_button"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/volume_button"
        app:layout_constraintBottom_toTopOf="@+id/des_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edittext"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_volume" />

    <TextView
        android:id="@+id/ipa_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="/trænzˈleɪt/"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_text" />

    <TextView
        android:id="@+id/des_text"
        android:layout_width="344dp"
        android:layout_height="392dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_medium"
        android:text="translate something into something.
        He translated the letter into English. Her books have been translated into 24 languages. Can you help me translate this legal jargon into plain English?"
        android:textColor="#121212"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipa_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
