<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Course1">

    <!-- Header section -->
    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center|left"
        android:padding="16dp"
        android:text="Topic"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Search bar -->
    <EditText
        android:id="@+id/searchCourse"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_search"
        android:hint="Tìm Topic"
        android:padding="12dp"
        android:textColorHint="#C5C5C5"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTitle" />

    <!-- Course category section -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCourse">

        <Button
            android:id="@+id/btnAll"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/selected_button_background"
            android:text="Tất cả"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVocabulary"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/unselected_button_background"
                android:text="Thêm mới"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

    <!-- Topic list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topicList"
        android:layout_width="380dp"
        android:layout_height="470dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/item_course" />

    <!-- Add Topic Button -->

    <!-- Thanh chứa các nút khác (Home, Course, Message, Account) -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1F0FF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/home_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home_button"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trang chủ"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Course Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/course_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/course_button"
                app:srcCompat="@drawable/ic_course" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khóa học"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Library Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/message_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/lib_button"
                app:srcCompat="@drawable/ic_lib" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thư viện"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Account Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/account_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/account_button"
                app:srcCompat="@drawable/ic_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tài khoản"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_addNewTopic"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@null"
        android:contentDescription="@string/account_button"
        android:src="@drawable/ic_add2"
        app:layout_constraintEnd_toEndOf="@+id/headerTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>