<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Header -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center|left"
        android:padding="16dp"
        android:text="Thư viện"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Filter Dropdown -->

    <Spinner
        android:id="@+id/spinnerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Tùy chọn"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <ImageButton
        android:id="@+id/btn_addNewTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/account_button"
        android:padding="16dp"
        android:src="@drawable/ic_add2"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerView"
        tools:ignore="TouchTargetSizeCheck" />


    <!-- List of Topics -->

    <!-- Thanh chứa các nút khác (Home, Course, Message, Account) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/folderList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerView"
        tools:listitem="@layout/item_folder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topicList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerView"
        tools:listitem="@layout/item_folder" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1F0FF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/home_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home_button"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trang chủ"
                android:textColor="#3F51B5"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Course Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/course_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/course_button"
                app:srcCompat="@drawable/ic_course" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khóa học"
                android:textColor="#3F51B5"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Library Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/message_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/lib_button"
                app:srcCompat="@drawable/ic_lib" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thư viện"
                android:textColor="#3F51B5"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Account Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@id/account_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/account_button"
                app:srcCompat="@drawable/ic_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tài khoản"
                android:textColor="#3F51B5"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- New Vocabulary Input Form (Initially Invisible) -->
        <LinearLayout
            android:id="@+id/addFolderForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vocabularyList"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <EditText
                android:id="@+id/englishWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nhập tên Folder"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/vietnameseWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mô tả thêm về Folder"
                android:inputType="text"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_new"
                    android:layout_marginEnd="20dp"
                    android:text="Hủy" />

                <Button
                    android:id="@+id/saveVocabularyButton"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_button_new"

                    android:text="Lưu" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
